--- a/templates/verification.html
+++ b/templates/verification.html
@@ -19,14 +19,14 @@
                             <input type="text" class="form-control" id="otp" name="otp" required maxlength="6">
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary">Verify</button>
+                            <button type="submit" class="btn btn-default">Verify</button>
                         </div>
                     </form>
                     
                     <div class="mt-3 text-center">
                         <form method="POST" action="{% url 'meds:resend_otp' %}">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-link">Resend OTP</button>
+                            <button type="submit" class="btn btn-default">Resend OTP</button>
                         </form>
                     </div>
                 </div>
